# flake8-picky-parentheses

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  release.yml  test.yml  third_try.yml
flake8_brackets_position/: __init__.py
flake8_picky_parentheses/: __init__.py  _brackets_position.py  _meta.py  _redundant_parentheses.py  _util.py
flake8_redundant_parentheses/: __init__.py
parentheses_checker/: __init__.py
src/flake8_picky_parentheses/: __init__.py  _brackets_position.py  _meta.py  _redundant_parentheses.py  _util.py
tests/: __init__.py  _common.py  test.py  test_brackets_posiition.py  test_brackets_position.py  test_redundant_parentheses.py
