[project]
name = "flake8-picky-parentheses"
description = "flake8 plugin to nitpick about parenthesis, brackets, and braces"
authors = [
    { name = "Ivan Prychantovskyi" },
    { name = "Rouven Bauer" },
]
readme = "README.md"
dependencies = [
    "flake8>=3.7, <8.0",
]
requires-python = ">=3.7"
classifiers = [
    "Framework :: Flake8",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = [
    "flake8",
    "plugin",
    "redundant",
    "superfluous",
    "extraneous",
    "unnecessary",
    "parentheses",
    "parenthesis",
    "parens",
    "brackets",
    "linter",
    "linting",
    "codestyle",
    "code style",
]
license = {text = "Apache License 2.0"}
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/robsdedude/flake8-picky-parentheses"
"Issue Tracker" = "https://github.com/robsdedude/flake8-picky-parentheses/issues"
"Source Code" = "https://github.com/robsdedude/flake8-picky-parentheses"
"Changelog" = "https://github.com/robsdedude/flake8-picky-parentheses/blob/master/CHANGELOG.md"

[project.entry-points."flake8.extension"]
"PAR0" = "flake8_picky_parentheses:PluginRedundantParentheses"
"PAR1" = "flake8_picky_parentheses:PluginBracketsPosition"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "flake8_picky_parentheses.__version__" }

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2
use_parentheses = true
ensure_newline_before_comments = true
order_by_type = false
remove_redundant_aliases = true
force_sort_within_sections = true
